--- a/index.html
+++ b/index.html
@@ -1,41 +1,16 @@
-this is my main heading
-everything in lower case
+<!DOCTYPE html>
+<html lang="en">
 
-<body>
-    <p>html elements</p>
-p
-img 
-h1
-h2
-table
-form
-section
-link
-a
-input
-article
-header
+    <head>
+        not visible text
+        <title>home page</title>
+        <meta charset="utf-8">
 
+    </head>
+    <body>
+        <h1>home page</h1>
+        <p>some main text</p>
+    </body>
 
+</html>
 
-footer
-
-
-<h1> heading < > angle brakets opening and closing </h1>
-
-<h2>subheading</h2>
-
-<h3>this is heading 3</h3>
-
-<h4>heading 4</h4>
-
-<h5>heading 5</h5>
-
-<h6>heading 6</h6>
-
-    <p>opening tag</p>
-    <p>atribute - href</p>
-    <p>property="value"</p>
-    <a href='http:/www.google.com'>go to google</a>
-
-</body>
