--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
         not visible text
         <title>home page</title>
         <meta charset="utf-8">
+        <style>
+            h1 {
+                color: red;
+                background-color: antiquewhite;
+            }
+
+            p { text-transform: uppercase;
+
+            }
+        </style>
 
     </head>
     <body>
         <h1>home page</h1>
         <p>some main text</p>
+        <p>Lorem ipsum dolor sit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, placeat. Facere fuga labore tempore nobis porro illum quam repudiandae earum, adipisci ab, unde consequuntur exercitationem. Eos dolorum quasi repellendus dicta, labore at molestiae libero unde quisquam expedita dolores iusto suscipit vel magni, veniam quia harum. Placeat similique consectetur, est voluptatem aspernatur ipsum, a, reiciendis vero dolorum inventore minima. Commodi eligendi illum praesentium iste temporibus sequi dolor aperiam a, quis delectus ea maiores optio dolores quia voluptates animi assumenda nemo amet aliquid. Fugit quod quos culpa minima distinctio non, adipisci blanditiis dolorem minus quia esse expedita, id voluptate aperiam perferendis nihil quam. Ullam voluptatum libero sequi nemo quaerat consectetur adipisci veritatis, ipsa atque dolores quam sunt excepturi. Blanditiis voluptatum dolore ipsam libero adipisci sint nam, necessitatibus itaque error totam suscipit voluptas laudantium quae odit non dicta illo! Temporibus at modi accusantium explicabo fugit, a vero, molestias recusandae enim porro exercitationem quasi harum omnis dolore quos suscipit laudantium illum tempore reprehenderit molestiae perspiciatis et. Vitae, tempore voluptas harum nemo quis sit cumque nihil numquam id maiores, exercitationem incidunt. Quis voluptates, eos ipsa adipisci veniam at recusandae doloribus placeat vitae, provident iure debitis, assumenda ab! Quam numquam, tempore officiis cum quos fuga, cupiditate dolore alias nisi minus quo atque explicabo sapiente, unde vitae! Saepe dolorem, molestiae consequatur assumenda ut dolores eum officia praesentium minima modi accusamus rerum vel. Recusandae asperiores suscipit tenetur perspiciatis, consequatur assumenda quibusdam vero placeat ducimus provident, in voluptatum quisquam!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus, et asperiores. Dicta laudantium fugit, quisquam delectus consequuntur ducimus nam. Modi vero vitae quidem quasi aperiam corporis architecto quod debitis quis!</p>
     </body>
 
 </html>
